# nccl-halo-exchange-miniapp

./: .clang-format  CMakeLists.txt  README.md
src/: buffer_pool.cpp  buffer_pool.hpp  log_parser.cpp  log_parser.hpp  log_validator.cpp  log_validator.hpp  main.cpp  mpi_backend.cpp  mpi_backend.hpp  nccl_backend.cpp  nccl_backend.hpp
